# iotex-arduino

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_protobuf.sh  keywords.txt  library.json  library.properties  protobuf_decode.sh
docs/: _io_te_x_client_8h_source.html  _io_te_x_result_codes_8h_source.html  account_8h_source.html  annotated.html  classes.html  classiotex_1_1_account-members.html  classiotex_1_1_account.html  classiotex_1_1_encoder-members.html  classiotex_1_1_encoder.html  classiotex_1_1_helpers-members.html  classiotex_1_1_helpers.html  classiotex_1_1_storage-members.html  classiotex_1_1_storage.html  classiotex_1_1api_1_1_i_wallets-members.html  classiotex_1_1api_1_1_i_wallets.html  classiotex_1_1api_1_1_wallets-members.html  classiotex_1_1api_1_1_wallets.html  classiotex_1_1api_1_1rpc_1_1_wallets-members.html  classiotex_1_1api_1_1rpc_1_1_wallets.html  client__helper_8h_source.html  encoder_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  namespaceiotex.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  pb__api_8h_source.html  rpc_8h_source.html  storage_8h_source.html  wallets_8h_source.html
docs/search/: all_0.js  all_4.js  all_6.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  classes_c.js  enums_0.js  enums_1.js  functions_2.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_2.js  variables_4.js
examples/ContractAddData/: ContractAddData.ino
examples/CreateAccountFromPrivateKey/: CreateAccountFromPrivateKey.ino
examples/CreateNewAccount/: CreateNewAccount.ino
examples/GetAccountMetadata/: GetAccountMetadata.ino
examples/GetExecutionByHash/: GetExecutionByHash.ino
examples/GetTransactionByHash/: GetTransactionByHash.ino
examples/IotexCommandLine/: IotexCommandLine.ino  commands.h  erc20Abi.h  platformio.ini  secrets.h
examples/SendTransfer/: SendTransfer.ino
examples/SignMessage/: SignMessage.ino
examples/StorePrivateKey/: StorePrivateKey.ino
examples/Xrc20Token/: Xrc20Token.ino  platformio.ini
examples/Xrc20TokenGetBalanceOf/: Xrc20TokenGetBalanceOf.ino
examples/Xrc20TokenSendTransfer/: Xrc20TokensendTransfer.ino
examples/Xrc20TokenTransferMultiple/: Xrc20TokenTransferMultiple.ino
examples/XrcToken/: platformio.ini
examples/XrcToken/src/: Xrc20Token.ino
examples/platformio_example/: README.md  extra_script.py  platformio.ini
examples/platformio_example/src/: commands.h  main.ino
include/iotex/: constants.h  result_codes.h
include/iotex/abi/: abi.h
include/iotex/account/: account.h
include/iotex/api/: abstract.h  base.h  rpc.h
include/iotex/api/wallet/: wallets.h
include/iotex/connection/: connection.h
include/iotex/contract/: contract.h
include/iotex/encoder/: encoder.h
include/iotex/helpers/: client_helpers.h  json_helper.h
include/iotex/host/: host.h
include/iotex/http/: http.h
include/iotex/protobuf/: pb_api.h
protobuf/: action.proto  blockchain.proto
protobuf/c_files/: action.pb.c  action.pb.h  blockchain.pb.c  blockchain.pb.h  timestamp.pb.h
src/: IoTeXClient.h  IoTeXConstants.h  IoTeXResultCodes.h  constants.h  iotex-client.h  result_codes.h
src/abi/: abi.cpp  abi.h
src/account/: account.cpp  account.h
src/api/: abstract.h  api.h  base.h  rpc.cpp  rpc.h
src/api/protobuf/: pb_api.cpp
src/api/wallet/: wallets.cpp  wallets.h
src/connection/: connection.h
src/contract/: contract.cpp  contract.h  xrc20Contract.cpp  xrc20Contract.h
src/encoder/: bech32.cpp  bech32.h  encoder.cpp  encoder.h
src/helpers/: client_helper.cpp  client_helper.h  client_helpers.h  json_helper.cpp  json_helper.h  reflection_helper.h
src/host/: host.cpp  host.h
src/http/: http.h
src/http/esp/: http.cpp
src/http/nano33/: http.cpp
src/http/os/: http.cpp
src/protobuf/: pb_api.cpp  pb_api.h
src/protobuf_files/: blockchain.proto
src/protobuf_files/c_files/: action.pb.c  action.pb.h  blockchain.pb.c  blockchain.pb.h  timestamp.pb.c  timestamp.pb.h
src/random/: platformRand32.cpp  random.h
src/random/esp32/: random.cpp
src/random/esp8266/: ESP8266TrueRandom.cpp  ESP8266TrueRandom.h  random.cpp
src/random/nano33iot/: random.cpp
src/random/os/: random.cpp
src/signer/: signer.cpp  signer.h
src/storage/: storage.h
src/storage/esp/: storage.cpp
src/storage/esp32/: storage.cpp
src/storage/nano33iot/: storage.cpp
src/storage/os/: storage.cpp
tests/: CMakeLists.txt
tests/src/abi/: abiTests.cpp
tests/src/account/: accountTests_Execution.cpp  accountTests_Integration.cpp
tests/src/api/wallets/: walletsTests.cpp
tests/src/contract/: contractTests.cpp  xrc20ContractTests.cpp
tests/src/signer/: signerTests.cpp
tools/: build.sh  build_protobuf.sh
